--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@applitools/eyes-testcafe": "^1.4.2",
+    "@applitools/eyes-testcafe": "latest",
     "testcafe": "^1.6.0"
   }
 }
