--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@applitools/eyes-testcafe": "latest",
+    "@applitools/eyes-testcafe": "1.12.1",
     "testcafe": "latest"
   }
 }
